--- a/homepage.html
+++ b/homepage.html
@@ -3,49 +3,41 @@
 
 <head>
 
+	<script type="text/javascript" src="" ></script>
     <meta charset="utf-8">
-    
     <title>Play and Win BitCoins</title>
-
 	<style type="text/css">
-        body
-        {
+
+        body {
             background-color: lightgrey;
             color: black;
             font-family: Arial;
         }
 
-        header
-        {
+        header {
             font-size: 50px;
             text-align: center;
         }
 
-        h5
-        {
+        h5 {
         	font-size: 18px;
             text-align: center;
             width: 0 auto;
             color:
         }
 
-        h1
-        {
+        h1 {
             text-align: center;
             width: 0 auto;
             height: 50px;
         }
 
-        footer
-        {
+        footer {
             display: list-item;
             clear: ;
         }
+
 	</style>
-
-
-    <script type="text/javascript" src="" >
-    </script>
 
 </head>
 
